--- a/kino-frontend/src/request/RequestTypePage.css
+++ b/kino-frontend/src/request/RequestTypePage.css
@@ -18,16 +18,31 @@
     color: white;
     font-weight: bold;
     background-color: dimgray;
+    margin-top: -5px;
 }
 
 .frame-item {
-    width: 200px;
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
     background-color: #404040;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0px 0px 8px black;
     margin-top: 20px;
+}
+
+.remove-button {
+    background-color: #ff0000;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    margin-top: auto;
+    width: 25%;
+    align-items: center;
 }
 
 .quote-search-bar {
