--- a/kino-frontend/src/request/RequestTypePage.css
+++ b/kino-frontend/src/request/RequestTypePage.css
@@ -3,6 +3,40 @@
     border-radius: 10px;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .overlay-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+}
+  
+  .overlay-image {
+    max-width: 75%;
+    height: auto;
+  }
+
 .frame-container {
     display: flex;
     flex-wrap: wrap;
@@ -31,6 +65,14 @@
     padding: 15px;
     box-shadow: 0px 0px 8px black;
     margin-top: 20px;
+}
+
+.frame-image { 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .remove-button {
