--- a/kino-frontend/src/request/RequestTypePage.css
+++ b/kino-frontend/src/request/RequestTypePage.css
@@ -139,7 +139,25 @@
     opacity: 1;
 }
 
+.image-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.loading-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
 .frame-image { 
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
